Update to latest version of Asciidoctor stuff
This will allow us to upgrade both the pdf theme and the html theme